# vast_2

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  context.md
server/: Cargo.toml
server/migrations/: 20260414200954_initial_migration.sql  20260414231724_buildings.sql  20260415034742_warp_jobs.sql  20260416015130_stock_and_presence.sql  20260416025525_add_from_to_warp_jobs.sql  20260416171448_add_user_credits.sql  20260416182035_drop_capacity_kt_from_stock.sql  20260416204837_replace_warp_jobs.sql  20260417000000_add_from_star_coords_to_ships.sql  20260418061051_add_scan_cooldown.sql
server/src/: auth.rs  error.rs  lib.rs  main.rs  types.rs
server/src/auth/: jwt.rs  login.rs  mod.rs  registration.rs
server/src/battle/: handlers.rs  logic.rs  mod.rs
server/src/buildings/: attack_mode.rs  delete.rs  handlers.rs  mod.rs  prices.rs  upgrade.rs
server/src/jobs/: _old_warp.rs  mod.rs  warp.rs
server/src/presence/: handlers.rs  logic.rs  mod.rs
server/src/scan/: handlers.rs
server/src/ships/: attack_mode.rs  collect.rs  docking.rs  get.rs  mod.rs  sell.rs
server/src/stock/: logic.rs
src/: main.rs
universe/: Cargo.toml
universe/src/: _battle.rs  battle.rs  buildings.rs  checker.rs  generator.rs  hasher.rs  helpers.rs  lib.rs  material_stock.rs  resources.rs  settings.rs  ships.rs  star_id.rs
