[package]
name = "vast_2"
version = "0.1.0"
edition = "2024"

[dependencies]

# Web server
axum = "0.8.8"
tokio = { version = "1.51.1", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.149"

# Auth
argon2 = "0.5.3"
jsonwebtoken = "10.3.0"

# DB
sqlx = "0.8.6"
time = "0.3.47"
uuid = "1.23.0"

# Error handling
anyhow = "1.0.102"


# Env
dotenvy = "0.15.7"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
