[package]
name = "universe"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enables `SpacetimeType` on shared types used by the SpacetimeDB module.
spacetimedb = ["dep:spacetimedb"]

[dependencies]
spacetimedb = { version = "2.1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.10.1"
