[package]
name = "universe"
version = "0.1.0"
edition = "2024"

[features]
default = []

[dependencies]
spacetimedb = { version = "2.1.0", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.10.1"
sqlx = "0.8.6"
uuid = { version = "1.0", features = ["serde"] }
time = { version = "0.3", features = ["serde"] }
